--- a/index.html
+++ b/index.html
@@ -289,7 +289,61 @@ val v2Users = v1Users.transformInto[List[v2.User]]
 </code></pre>
     <h1 id="Coproductssupport" style="display: block;" class=" scalatex-site-Styles-hoverContainer scalatex-site-Styles-headerTag"><a class=" scalatex-site-Styles-headerLink" href="#Coproductssupport" style="position: absolute;right: 0px;"><i class="fa fa-link"></i></a>Coproducts support</h1>
       <p>
-        todo
+        With chimney you can not only transform case classes, but sealed trait hierarchies
+        (also known as coproducts) as well. Consider two following hierarchy definitions.
+</p>
+      <pre><code class="scala scalatex-site-Styles-highlightMe">sealed trait Color
+object Color {
+  case object Red extends Color
+  case object Green extends Color
+  case object Blue extends Color
+}
+
+sealed trait Channel
+object Channel {
+  case object Alpha extends Channel
+  case object Blue extends Channel
+  case object Green extends Channel
+  case object Red extends Channel
+}
+</code></pre>
+      <p>
+        Because of object names correspondence, we can transform <code>Color</code> to a <code>Channel</code>
+        in a simple way.
+</p>
+      <pre><code class="scala scalatex-site-Styles-highlightMe">val colRed: Color = Color.Red
+val chanRed = colRed.transformInto[Channel]
+// chanRed: Channel = Red
+</code></pre>
+      <p>
+        How about other way round?
+</p>
+      <pre><code class="scala scalatex-site-Styles-highlightMe">chanRed.transformInto[Color]
+// error: could not find implicit value for parameter derivedTransformer: io.scalaland.chimney.DerivedTransformer[Channel,Color,shapeless.HNil]
+//        chanRed.transformInto[Color]
+//                             ^
+</code></pre>
+      <p>
+        This time we tried to transform a <code>Channel</code> to a <code>Color</code>. Notice that in this
+        case we don't have defined case object in target hierarchy with corresponding name for
+        <code>case object Alpha</code>. Wanting to keep the transformation total, we need to somehow
+        provide a value from a target domain. We can use <code>withCoproductInstance</code> to do that.
+        Let's convert any <code>Channel.Alpha</code> to <code>Color.Blue</code>.
+</p>
+      <pre><code class="scala scalatex-site-Styles-highlightMe">val red = chanRed.into[Color]
+  .withCoproductInstance { (_: Channel.Alpha.type) =&gt; Color.Blue }
+  .transform
+// red: Color = Red
+
+val alpha: Channel = Channel.Alpha
+val blue = alpha.into[Color]
+  .withCoproductInstance { (_: Channel.Alpha.type) =&gt; Color.Blue }
+  .transform
+// blue: Color = Blue
+</code></pre>
+      <p>
+        After providing a default, Chimney can prove the transformation is total and use provided
+        function, when it's needed.
 </p>
     <h1 id="Patchers" style="display: block;" class=" scalatex-site-Styles-hoverContainer scalatex-site-Styles-headerTag"><a class=" scalatex-site-Styles-headerLink" href="#Patchers" style="position: absolute;right: 0px;"><i class="fa fa-link"></i></a>Patchers</h1>
       <p>
@@ -311,4 +365,4 @@ val v2Users = v1Users.transformInto[List[v2.User]]
         );
       })
     })
-  </script></body></html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             
+  </script></body></html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   
