--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ val event = command.into[CoffeeMade]
 </code></pre>
   <div style="margin: 0px;color: #333;text-align: center;padding: 2.5em 2em 0;border-bottom: 1px solid #eee;display: block;" id="Gettingstarted" class=" scalatex-site-Styles-hoverContainer scalatex-site-Styles-headerTag"><h1 style="margin: 0.2em 0;font-size: 3em;font-weight: 300;">Getting started<a class=" scalatex-site-Styles-headerLink" href="#Gettingstarted" style="position: absolute;right: 0px;"><i class="fa fa-link"></i></a></h1><br /></div>
     <p>
-      To include Chimney to your SBT project, add following line to you <code>build.sbt</code></p>
+      To include Chimney to your SBT project, add following line to you <code>build.sbt</code>:</p>
     <pre><code class="scala scalatex-site-Styles-highlightMe">libraryDependencies += &quot;io.scalaland&quot; %% &quot;chimney&quot; % &quot;0.1.8&quot;</code></pre>
     <p>
       Library is released for Scala 2.11 and 2.12.
