--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ val steve = stevie.transformInto[Butterfly]
     <h1 id="Valueclasses" style="display: block;" class=" scalatex-site-Styles-hoverContainer scalatex-site-Styles-headerTag"><a class=" scalatex-site-Styles-headerLink" href="#Valueclasses" style="position: absolute;right: 0px;"><i class="fa fa-link"></i></a>Value classes</h1>
       <p>
         As nowadays value classes tends to be relatively widely pervasive, Chimney handles
-        then in a special way, supporting automatic value class field extraction and wrapping.
+        them in a special way, supporting automatic value class field extraction and wrapping.
 </p>
       <pre><code class="scala scalatex-site-Styles-highlightMe">object rich {
   case class PersonId(id: Int) extends AnyVal
